CS323/project/test/test_1/test_GfB6t8Va.out
Error type A at Line 9: unknown lexme '&'
