CS323/project/test/test_1/test_GfB6t8Va.spl
int test_11610613_1() 
{
    int i = 114514;
    int j = 0;
    int c = 1 || 0;
    if(i > j){    
        return i/j;
    }          
    return i&j;        
}
